--- a/police_eda.Rmd
+++ b/police_eda.Rmd
@@ -24,6 +24,7 @@ library(ggplot2)
 library(dplyr)
 library(tidyr)
 library(tidyverse)
+library(reshape2)
 ```
 
 ```{r load-data}
@@ -96,7 +97,7 @@ all <- all %>%
          unarmed = as.numeric(weapon == "unarmed"),
          unknown_weapon = as.numeric(weapon == "U"),
          fatal = as.numeric(str_count(all$Fatal, "F") > 0)) %>% 
-  select(-c(weapon, SubjectGender, OfficerGender))
+  select(-c(weapon))
 
 all <- rename(all, sb = b, sw = w, sl = l, sa = a, weapon_other = other)
 ```
@@ -330,7 +331,7 @@ temp <- rbind(tempsb, tempsw, tempsl, tempsa, tempso) %>%
 
 race_count <- ggplot(temp, aes(x = type, y = count, fill = fatal)) +
   geom_bar(position = "dodge", stat="identity") + 
-  labs(x = "Present Victim Race", y = "Count", title = "Counts for Fatal vs. Non-Fatal Single-Victim Police Shootings Across Different Races") +
+  labs(x = "Victim Race", y = "Count", title = "Counts for Fatal vs. Non-Fatal Single-Victim Police Shootings Across Different Races") +
   theme(legend.text = element_text(size = 8),
         legend.key.size = unit(0.4, "cm"),
         axis.text.x = element_text(angle = 10, hjust = 1, size = 8),
@@ -339,7 +340,7 @@ race_count <- ggplot(temp, aes(x = type, y = count, fill = fatal)) +
 
 race_prop <- ggplot(temp, aes(x = type, y = prop, fill = fatal)) +
   geom_bar(position = "stack", stat="identity") + 
-  labs(x = "Present Victim Race", y = "Proportion", title = "Proportions for Fatal vs. Non-Fatal Single-Victim Police Shootings Across Different Races") +
+  labs(x = "Victim Race", y = "Proportion", title = "Proportions for Fatal vs. Non-Fatal Single-Victim Police Shootings Across Different Races") +
   theme(legend.text = element_text(size = 7),
         legend.key.size = unit(0.4, "cm"),
         axis.text.x = element_text(angle = 10, hjust = 1, size = 8),
@@ -384,7 +385,7 @@ temp <- rbind(tempsb, tempsw, tempsl, tempsa) %>%
 
 race_count1 <- ggplot(temp, aes(x = type, y = count, fill = fatal)) +
   geom_bar(position = "dodge", stat="identity") + 
-  labs(x = "Present Victim Race", y = "Count", title = "Counts for Fatal vs. Non-Fatal Multiple-Victim Police Shootings Across Different Races") +
+  labs(x = "Victim Race", y = "Count", title = "Counts for Fatal vs. Non-Fatal Multiple-Victim Police Shootings Across Different Races") +
   theme(legend.text = element_text(size = 8),
         legend.key.size = unit(0.4, "cm"),
         axis.text.x = element_text(angle = 10, hjust = 1, size = 8),
@@ -393,7 +394,7 @@ race_count1 <- ggplot(temp, aes(x = type, y = count, fill = fatal)) +
 
 race_prop1 <- ggplot(temp, aes(x = type, y = prop, fill = fatal)) +
   geom_bar(position = "stack", stat="identity") + 
-  labs(x = "Present Victim Race", y = "Proportion", title = "Proportions for Fatal vs. Non-Fatal Multiple-Victim Police Shootings Across Different Races") +
+  labs(x = "Victim Race", y = "Proportion", title = "Proportions for Fatal vs. Non-Fatal Multiple-Victim Police Shootings Across Different Races") +
   theme(legend.text = element_text(size = 7),
         legend.key.size = unit(0.4, "cm"),
         axis.text.x = element_text(angle = 10, hjust = 1, size = 8),
@@ -411,17 +412,17 @@ temp <- final_eda %>%
             total = n())
 temp
 ```
-
+For sample size > 10, fatality seems to be lower for multiple victims rather than just 1.
 
 ```{r black to white ratio}
-temp <- final_eda %>% 
-  group_by(city, fatal) %>% 
-  summarise(btw = black/white) %>% 
+temp <- final_df %>% 
+  group_by(city) %>% 
+  summarise(btw = black/white, propfatal = sum(fatal)/n()) %>% 
   unique
 
-plot <- ggplot(temp, aes(x = btw, y = fatal, fill = fatal)) + 
-    geom_boxplot()  + 
-  labs(x = "Black to White Ratio", y = "Fatal vs. Non-Fatal Shooting", title = "City Black to White Ratio Distributions for Fatal vs. Non-Fatal Police Shootings") +
+plot <- ggplot(temp, aes(x = btw, y = propfatal)) + 
+    geom_point()  + 
+  labs(x = "Black to White Ratio", y = "Fatal Shootings Proportions", title = "Proportion of Fatal Shootings vs. Black to White Ratios in Cities") +
   theme(legend.text = element_text(size = 8),
         legend.key.size = unit(0.4, "cm"),
         axis.text.x = element_text(angle = 10, hjust = 1, size = 8),
@@ -429,7 +430,74 @@ plot <- ggplot(temp, aes(x = btw, y = fatal, fill = fatal)) +
 
 ggsave(filename = "figures/btweda.png", plot)
 ```
-Means are not that different, will probably just use percent black and percent white then.
+
+Can't really tell if there's a distribution here, maybe negatively correlated.
+
+```{r black percent}
+temp <- final_df %>% 
+  group_by(city) %>% 
+  summarise(bprop = black/city_pop_2013, propfatal = sum(fatal)/n()) %>% 
+  unique
+
+plot <- ggplot(temp, aes(x = bprop, y = propfatal)) + 
+    geom_point()  + 
+  labs(x = "Black Percentage of Population", y = "Fatal Shootings Proportions", title = "Proportion of Fatal Shootings vs. Black Population Percentages in Cities") +
+  theme(legend.text = element_text(size = 8),
+        legend.key.size = unit(0.4, "cm"),
+        axis.text.x = element_text(angle = 10, hjust = 1, size = 8),
+        plot.title = element_text(size=10, hjust = 0.5))
+
+ggsave(filename = "figures/bpropeda.png", plot)
+```
+
+Same thing, can't really tell if there's a distribution here, maybe negatively correlated.
+
+```{r}
+temp <- final_df %>% 
+  summarise(Black = sum(str_count(OfficerRace, "B")), 
+            White = sum(str_count(OfficerRace, "W")),
+            Hispanic = sum(str_count(OfficerRace, "L")),
+            Asian = sum(str_count(OfficerRace, "A")), 
+            Other = sum(str_count(OfficerRace, "O")))
+ggplot(temp, aes(x = ))
+```
+
+```{r}
+temp <- final_df %>% 
+  filter(sb == 1) %>% 
+  group_by(fatal) %>% 
+  summarise(ob = sum(ob == 1),
+            ow = sum(ow == 1),
+            ol = sum(ol == 1),
+            oa = sum(oa == 1),
+            oo = sum(oo == 1)) %>% 
+  mutate(ob = ob/(ob + ow + ol + oa + oo), 
+         ow = ow/(ob + ow + ol + oa + oo),
+         ol = ol/(ol + ow + ol + oa + oo), 
+         oa = oa/(ob + ow + ol + oa + oo), 
+         oo = oo/(ob + ow + ol + oa + oo))
+temp <- rename(temp, Black = ob, White = ow, Latino = ol, Asian = oa, Other = oo)
+
+temp2 <- temp %>%
+    t() %>%
+    as.data.frame(stringsAsFactors = F) %>%
+    rownames_to_column("race") %>%
+    `rownames<-`(NULL)
+temp2 <- rename(temp2, "Non-Fatal" = 2, Fatal = 3)
+temp2 <- temp2[-1,]
+temp2 <- melt(temp2)
+
+officerplot <- ggplot(temp2, aes(x=race, y = value, fill = variable)) +
+  geom_bar(position = "dodge", stat="identity") + 
+  labs(x = "Officer Race", y = "Proportion", title = "Race Proportions for Fatal vs. Non-Fatal Police Shootings Where Black Victims were Present") +
+  theme(legend.text = element_text(size = 7),
+        legend.key.size = unit(0.4, "cm"),
+        plot.title = element_text(size=10, hjust = 0.5)) + 
+  scale_fill_manual(values=c("#D48C7D", "#7DB2D4"))
+
+ggsave(filename = "figures/officerpropsb.png", officerplot)
+```
+
 
 ### OLD CODE 
 ```{r}
