--- a/police_eda.Rmd
+++ b/police_eda.Rmd
@@ -388,7 +388,7 @@ race_count1 <- ggplot(temp, aes(x = type, y = count, fill = fatal)) +
   labs(x = "Victim Race", y = "Count", title = "Counts for Fatal vs. Non-Fatal Multiple-Victim Police Shootings Across Different Races") +
   theme(legend.text = element_text(size = 8),
         legend.key.size = unit(0.4, "cm"),
-        axis.text.x = element_text(angle = 10, hjust = 1, size = 8),
+        axis.text.x = element_text(size = 8),
         plot.title = element_text(size=10, hjust = 0.5)) + 
   scale_fill_manual(values=c("#D48C7D", "#7DB2D4"))
 
@@ -397,7 +397,7 @@ race_prop1 <- ggplot(temp, aes(x = type, y = prop, fill = fatal)) +
   labs(x = "Victim Race", y = "Proportion", title = "Proportions for Fatal vs. Non-Fatal Multiple-Victim Police Shootings Across Different Races") +
   theme(legend.text = element_text(size = 7),
         legend.key.size = unit(0.4, "cm"),
-        axis.text.x = element_text(angle = 10, hjust = 1, size = 8),
+        axis.text.x = element_text(size = 8),
         plot.title = element_text(size=10, hjust = 0.5)) + 
   scale_fill_manual(values=c("#D48C7D", "#7DB2D4"))
 
